[gd_scene load_steps=36 format=3 uid="uid://eepmdlch0g3f"]

[ext_resource type="Script" path="res://Spaceship/Miners/smelter.gd" id="1_0bbgi"]
[ext_resource type="Texture2D" uid="uid://cxougge4xtcnf" path="res://Assets/furnace.png" id="2_4ati5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_al8kr"]
atlas = ExtResource("2_4ati5")
region = Rect2(0, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_33qro"]
atlas = ExtResource("2_4ati5")
region = Rect2(50, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_huk6t"]
atlas = ExtResource("2_4ati5")
region = Rect2(100, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_unobg"]
atlas = ExtResource("2_4ati5")
region = Rect2(150, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_d25g2"]
atlas = ExtResource("2_4ati5")
region = Rect2(200, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ikwg"]
atlas = ExtResource("2_4ati5")
region = Rect2(250, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_brvmj"]
atlas = ExtResource("2_4ati5")
region = Rect2(300, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_8bwvx"]
atlas = ExtResource("2_4ati5")
region = Rect2(350, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlmw2"]
atlas = ExtResource("2_4ati5")
region = Rect2(400, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_8j1b0"]
atlas = ExtResource("2_4ati5")
region = Rect2(450, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_5jy2y"]
atlas = ExtResource("2_4ati5")
region = Rect2(500, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_7fnnp"]
atlas = ExtResource("2_4ati5")
region = Rect2(550, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_56jpt"]
atlas = ExtResource("2_4ati5")
region = Rect2(600, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohpva"]
atlas = ExtResource("2_4ati5")
region = Rect2(650, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_huwxt"]
atlas = ExtResource("2_4ati5")
region = Rect2(700, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_g8vrx"]
atlas = ExtResource("2_4ati5")
region = Rect2(750, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7nwi"]
atlas = ExtResource("2_4ati5")
region = Rect2(800, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_eo6nw"]
atlas = ExtResource("2_4ati5")
region = Rect2(850, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_hiu02"]
atlas = ExtResource("2_4ati5")
region = Rect2(900, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8r3l"]
atlas = ExtResource("2_4ati5")
region = Rect2(950, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_2cffj"]
atlas = ExtResource("2_4ati5")
region = Rect2(1000, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_sow0t"]
atlas = ExtResource("2_4ati5")
region = Rect2(1050, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_6xf36"]
atlas = ExtResource("2_4ati5")
region = Rect2(1100, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_we2tr"]
atlas = ExtResource("2_4ati5")
region = Rect2(1150, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_jl6aa"]
atlas = ExtResource("2_4ati5")
region = Rect2(1200, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_qkhru"]
atlas = ExtResource("2_4ati5")
region = Rect2(1250, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_idfg1"]
atlas = ExtResource("2_4ati5")
region = Rect2(1300, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_bk1bb"]
atlas = ExtResource("2_4ati5")
region = Rect2(1350, 0, 50, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_umwcv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_al8kr")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_33qro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_huk6t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_unobg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d25g2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ikwg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_brvmj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8bwvx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlmw2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8j1b0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5jy2y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7fnnp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_56jpt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohpva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_huwxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g8vrx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7nwi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eo6nw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hiu02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8r3l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2cffj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sow0t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6xf36")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_we2tr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jl6aa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qkhru")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_idfg1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bk1bb")
}],
"loop": false,
"name": &"start",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o72hs"]
size = Vector2(48, 48)

[sub_resource type="Animation" id="Animation_spuvf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_h761g"]
resource_name = "pulse"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1.2, 1.2, 1.2, 1), Color(1.5, 1.5, 1.5, 1), Color(1.2, 1.2, 1.2, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gef26"]
_data = {
"RESET": SubResource("Animation_spuvf"),
"pulse": SubResource("Animation_h761g")
}

[node name="Smelter" type="Node2D"]
z_index = 1
script = ExtResource("1_0bbgi")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_umwcv")
animation = &"idle"
speed_scale = 1.5

[node name="SmelterRadius" type="Area2D" parent="."]
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SmelterRadius"]
shape = SubResource("RectangleShape2D_o72hs")

[node name="SmelterTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gef26")
}

[connection signal="body_entered" from="SmelterRadius" to="." method="_on_smelter_radius_body_entered"]
[connection signal="body_exited" from="SmelterRadius" to="." method="_on_smelter_radius_body_exited"]
[connection signal="timeout" from="SmelterTimer" to="." method="_on_smelter_timer_timeout"]
